--- a/sass/partials/base/05-layouts/_layouts.sass
+++ b/sass/partials/base/05-layouts/_layouts.sass
@@ -32,6 +32,12 @@
     +breakpoint($bp-mobile-max)
       margin-bottom: 15px !important
 
+#quicklinks
+  .panel-pane
+    margin-bottom: 30px !important
+    +breakpoint($bp-mobile-max)
+      margin-bottom: 15px !important
+
 ////////////////////////////
 // FULL WIDTH PANELS LAYOUTS
 ////////////////////////////
