--- a/sass/partials/design/_design.sass
+++ b/sass/partials/design/_design.sass
@@ -388,27 +388,6 @@ a.no-border
     a
       color: $text-black
 
-//////////////////
-// MEDIA TOOLKIT
-//////////////////
-.pane-media-toolkit
-  @extend %box-shadow
-  @extend %border-grey
-  background: $grey-f
-  padding: $standard-padding
-  padding-top: 0
-  h2.pane-title
-    +border-label
-    color: $red
-  .pane-content
-    margin-top: 60px
-    ul
-      margin: 0
-      padding: 0
-    li
-      line-height: 30px
-      border-top: 1px solid #e4e4e4
-
 // Footnotes
 // Number
 .field-name-field-body
